# ascella

./: .deepsource.toml  .dockerignore  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yml  dprint.json  init.ts  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: commit.yml  gui.yml  linux.sh  (+2 more)
apps/ascella-desktop/: Cargo.toml  build.rs
apps/ascella-desktop/src/: home.rs  lib.rs  main.rs
apps/backend/: .gitignore  .sharenix.json  Cargo.toml  README.md  package.json
apps/backend/prisma/: schema.prisma
apps/backend/src/bot/: Cargo.toml  build.rs
apps/backend/src/bot/src/: bot.rs  lib.rs  utils.rs
apps/backend/src/bot/src/commands/: adddomain.rs  autodelete.rs  codedrop.rs  codes.rs  delete.rs  delete_latest.rs  domain.rs  domains.rs  embed.rs  emojis.rs  eval.rs  funny_redirect.rs  help.rs  mod.rs  profile.rs  redeem.rs  redirect.rs  stats.rs  unknown.rs  user.rs
apps/backend/src/core/: Cargo.toml
apps/backend/src/core/src/: main.rs
apps/backend/src/database/: Cargo.toml
apps/backend/src/database/src/: lib.rs  s3.rs  structs.rs
apps/backend/src/database/src/queries/: claim_code.rs  create_code.rs  create_image.rs  create_paste.rs  create_redirect.rs  create_user.rs  delete_image.rs  get_all_users.rs  get_codes.rs  get_discord_id.rs  get_domains.rs  get_embed.rs  get_image.rs  get_image_owner.rs  get_image_vanity.rs  get_image_vanity_only.rs  get_images.rs  get_latest_image.rs  get_paste_content.rs  get_unclaimed_code.rs  get_user.rs  get_user_discord.rs  get_user_image_count.rs  get_user_token.rs  get_users.rs  get_users_autodelete.rs  make_public.rs  mod.rs  set_autodelete.rs  set_domain.rs  set_domain_discord.rs  set_embed.rs  set_emojis.rs
apps/backend/src/http/: Cargo.toml
apps/backend/src/http/src/: lib.rs
apps/backend/src/http/src/routes/: mod.rs
apps/backend/src/http/src/routes/v1/: catcher.rs  config.rs  delete.rs  domain.rs  domains.rs  embed.rs  mod.rs  paste.rs  public.rs  redirect.rs  stats.rs  upload.rs  verify.rs  view.rs
apps/backend/src/http/src/routes/v2/: config.rs  domain.rs  domains.rs  embed.rs  images.rs  mod.rs  paste.rs  public.rs  redirect.rs  stats.rs  upload.rs  verify.rs  view.rs
apps/backend/src/ratelimit/: Cargo.toml
apps/backend/src/ratelimit/src/: lib.rs
apps/backend/src/util/: Cargo.toml
apps/backend/src/util/src/: image_effects.rs  lib.rs
apps/desktop/: Cargo.toml  README.md
apps/desktop/src/: app.rs  lib.rs  main.rs  util.rs
apps/desktop/src/ui/: app.rs  dark_theme.rs  light_theme.rs  style.rs
ascella/: Cargo.toml  api_description.md  build.rs
ascella/assets/: CREDITS.txt
ascella/bindings/: Codes.ts  Data.ts  Domain.ts  DomainData.ts  Domains.ts  EmbedData.ts  Embeds.ts  ImageData.ts  Images.ts  Pastes.ts  RedirectData.ts  SimpleImages.ts  StatsResponse.ts  Users.ts
ascella/nginx/: ascella.wtf.nginx
ascella/src/: lib.rs  main.rs
ascella/src/bot/: bot.rs  mod.rs  utils.rs
ascella/src/bot/commands/: addbadge.rs  adddomain.rs  autodelete.rs  codedrop.rs  codes.rs  delete.rs  delete_latest.rs  domain.rs  domains.rs  embed.rs  eval.rs  funny_redirect.rs  gencodes.rs  help.rs  lang.rs  mod.rs  profile.rs  redeem.rs  redirect.rs  stats.rs  unknown.rs  url_style.rs  user.rs
ascella/src/cron/: mod.rs
ascella/src/database/: mod.rs  s3.rs  structs.rs
ascella/src/database/queries/: claim_code.rs  create_code.rs  create_image.rs  create_paste.rs  create_redirect.rs  create_user.rs  delete_image.rs  get_all_users.rs  get_codes.rs  get_discord_id.rs  get_domains.rs  get_embed.rs  get_image.rs  get_image_owner.rs  get_image_vanity.rs  get_image_vanity_only.rs  get_images.rs  get_invite_count.rs  get_latest_image.rs  get_paste_content.rs  get_total_views.rs  get_unclaimed_code.rs  get_user.rs  get_user_auth.rs  get_user_code.rs  get_user_discord.rs  get_user_image_count.rs  get_user_token.rs  get_users.rs  get_users_autodelete.rs  make_public.rs  mod.rs  set_autodelete.rs  set_deleteall.rs  set_domain.rs  set_domain_discord.rs  set_embed.rs  set_invite_code.rs  set_language.rs  set_upload_key.rs  (+5 more)
ascella/src/http/: mod.rs
ascella/src/http/models/: config.rs  domain.rs  domains.rs  embed.rs  images.rs  lang.rs  mod.rs  public.rs  redirect.rs  report.rs  reviews.rs  stats.rs  upload_style.rs  user.rs
ascella/src/http/routes/: mod.rs
ascella/src/http/routes/v2/: ascella_stats.rs  config.rs  domain.rs  domains.rs  embed.rs  images.rs  lang.rs  mod.rs  openapi_3.rs  public.rs  redirect.rs  report.rs  reviews.rs  stats.rs  upload.rs  upload_style.rs  user.rs  verify.rs  view.rs
ascella/src/ratelimit/: mod.rs
ascella/src/util/: apply_responder.rs  mod.rs
backend/: .gitignore  package.json
bot/: Cargo.toml
cloudflare/: package.json  rollup.config.js  tsconfig.json  wrangler.toml
core/: Cargo.toml
core/src/: main.rs
dash/: Dockerfile  README.md  package-lock.json
database/: Cargo.toml
database/src/: s3.rs  structs.rs
database/src/queries/: create_code.rs  create_image.rs  create_redirect.rs  create_user.rs  get_all_users.rs  get_domains.rs  get_image_owner.rs  get_image_vanity.rs  get_image_vanity_only.rs  get_images.rs  get_latest_image.rs  get_paste_content.rs  get_user_auth.rs  get_user_image_count.rs  get_users.rs  get_users_autodelete.rs  make_public.rs  mod.rs  set_autodelete.rs  set_domain.rs  set_embed.rs  set_emojis.rs  set_upload_key.rs  set_url_style.rs
deploy/: mod.ts
desktop/: Cargo.toml  README.md
desktop/src/: lib.rs  main.rs  util.rs
desktop/src/ui/: app.rs  dark_theme.rs  mod.rs
docs/: docusaurus.config.js  package.json  vercel.json
embed-service/: Dockerfile  deploy.ts
http/: Cargo.toml
locales/: bg.json  en.json  es.json  fr.json  nl.json  pl.json  pt.json
prisma/: schema.prisma
prisma-rust/: package.json
ratelimit/: Cargo.toml
redirect/: fetch.ts  mod.ts
util/: Cargo.toml
web/: .dockerignore  Dockerfile  README.md  mdsvex.config.cjs  mdsvex.config.js  package-lock.json  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  vercel.json
(+144 files in other folders)
