[package]
name = "tsunami"
version = "0.1.0"
edition = "2021"

[features]
openssl-vendored = ["openssl/vendored"]

[[bin]]
name = "ascella"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-multipart = "0.4.0"
actix-web = "4"

tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }
tokio-cron-scheduler = "0.3.1"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.5"

anyhow = "1.0.56"
log = "0.4.16"
thiserror = "1.0.30"
tracing = "0.1.29"
tracing-subscriber = "0.3.5"

# TODO: someone else this sucks update twilight libraries
twilight-embed-builder = "=0.8"
twilight-gateway = "=0.8"
twilight-http = "=0.8"
twilight-model = "=0.8"
twilight-util = { version = "=0.8", features = ["builder"] }

openssl = { version = "0.10.38", optional = true }

byte-unit = "4.0.13"
bytes = "1.1.0"
cached = "0.26.2"
dotenv = "0.15.0"
futures = "0.3.19"
governor = "0.4.2"
humantime = "2.1.0"
lazy_static = "1.4.0"
once_cell = "1.9.0"
paperclip = { git = "https://github.com/fritterhoff/paperclip", features = ["actix4", "actix-multipart"] }
paste = "1.0.7"
rand = "0.8.5"
reqwest = { version = "0.11.8", features = ["gzip", "brotli"] }
rust-s3 = { version = "0.28.1", features = ["with-tokio", "tokio-native-tls", "tags"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.79"
tree_magic = "0.2.3"
ulid = "0.5.0"
