[package]
name = "tsunami"
version = "0.1.0"
edition = "2021"

[features]
openssl-vendored = ["openssl/vendored"]

[[bin]]
name = "ascella"
path = "src/main.rs"

[build-dependencies]
rosetta-build = "0.1"

[dependencies]
actix-cors = "0.6.1"
actix-multipart = "0.4.0"
actix-web = "4.0.1"

tokio = { version = "1.18.1", features = ["rt-multi-thread", "macros"] }
tokio-cron-scheduler = "0.7.0"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"

anyhow = "1.0.57"
log = "0.4.17"
thiserror = "1.0.31"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

rosetta-i18n = "0.1"
rust-embed = "6.4.0"

# TODO: someone else this sucks update twilight libraries
twilight-embed-builder = "0.10.1"
twilight-gateway = "0.10.1"
twilight-http = "0.10.2"
twilight-model = "0.10.2"
twilight-util = { version = "0.10.1", features = ["builder"] }

openssl = { version = "0.10.40", optional = true }

sentry = { version = "0.25.0", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
sentry-panic = "0.25.0"
sentry-tracing = "0.25.0"

serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

byte-unit = "4.0.14"
bytes = "1.1.0"
cached = "0.34.0"
dotenv = "0.15.0"
futures = "0.3.21"
governor = "0.4.2"
humantime = "2.1.0"
lazy_static = "1.4.0"
once_cell = "1.10.0"
paperclip = { git = "https://github.com/paperclip-rs/paperclip", features = ["actix4", "actix-multipart"] }
paste = "1.0.7"
rand = "0.8.5"
reqwest = { version = "0.11.10", features = ["gzip", "brotli"] }
rust-s3 = { version = "0.31.0", features = ["with-tokio", "tokio-native-tls", "tags"] }

tree_magic = "0.2.3"
ts-rs = "6.1.2"
ulid = "0.5.0"
