[package]
name = "ascella-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
async-trait = "0.1.52"
base64 = "0.13.0"
bytes = "0.5.6"
cached = "0.26.2"
chrono = "0.4.19"
dotenv = "0.15.0"
futures = "0.3.19"
lazy_static = "1.4.0"
log = "0.4.14"
once_cell = "1.9.0"
openssl = { version = "0.10.38", optional = true }
parking_lot = "0.11.2"
rand = "0.8.4"
serde_json = "1.0.74"

# S3
rust-s3 = { version = "0.28.1", features = ["with-tokio", "tokio-native-tls", "tags"] }
serde = { version = "1.0.133", features = ["derive"] }
sha1 = { version = "0.6.0", features = ["std"] }
sha2 = "0.9.2"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.5"
ttl_cache = "0.5.1"

[features]
openssl-vendored = ["openssl/vendored"]
