[package]
name = "ascella-desktop"
version = "0.4.11"
authors = ["Tricked-dev"]
edition = "2021"
homepage = "https://docs.ascella.host/ascella-desktop"
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/Tricked-dev/ascella"
description = "Ascella desktop app uploader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.0.5", features = ["cargo", "color"] }
clipboard = "0.5.0"
clipboard-ext = "0.2.0"
home = "0.5.3"
iced = { git = "https://github.com/iced-rs/iced", rev = "4db0f4a570a1fb3398062c78770c542d9efb8a64", features = ["tokio", "debug", "glow"] }
itertools = "0.10.3"
native-dialog = "0.6.2"
# use sync version of reqwest cause i cba to deal witht his shit tbfh
reqwest = { version = "0.9.10", features = [] }
rustc-hash = "1.1.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
tokio = { version = "1.15.0", features = ["sync"] }
toml = "0.5.8"
winit = "0.26.1"
[target.'cfg(target_os = "linux")'.dependencies]
wl-clipboard-rs = "0.6.0"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.38", features = ["vendored"] }
libc = "0.2.112"

[target.'cfg(windows)'.build-dependencies]
winapi = "0.3.9"

[[bin]]
name = "ascella-desktop"
path = "src/main.rs"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/ascella-desktop", dest = "/usr/bin/ascella", mode = "0755" },
  { source = "LICENSE", dest = "/usr/share/doc/ascella/LICENSE", doc = true, mode = "0644" },
  { source = "README.md", dest = "/usr/share/doc/ascella/README.md", doc = true, mode = "0644" },
]

[package.metadata.appimage]

[package.metadata.deb]
license-file = ["LICENSE", "4"]
extended-description = """Ascella desktop app"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
  ["target/release/ascella-desktop", "usr/bin/ascella", "755"],
  ["LICENSE", "usr/share/doc/ascella/LICENSE", "644"],
  ["README.md", "usr/share/doc/ascella/README.md", "644"],
]
