[package]
name = "ascella-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
ascella-database = { path = "../database" }
ascella-util = { path = "../util" }
base64 = "0.13.0"
byte-unit = "4.0.13"
cached = "0.26.2"
dotenv = "0.15.0"
futures = "0.3.18"
http = "0.2.5"
humantime = "2.1.0"
lazy_static = "1.4.0"
log = "0.4.14"
once_cell = "1.8.0"
openssl = { version = "0.10.38", optional = true }
rand = "0.8.4"
reqwest = { version = "0.11.7", features = ["json", "gzip", "brotli"] }
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
tokio = { version = "1.14.0", features = ["full"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.5"
tracing = "0.1.29"
twilight-embed-builder = "0.8.0"
twilight-gateway = "0.8.0"
twilight-http = "0.8.0"
twilight-model = "0.8.0"
twilight-util = { version = "0.8.0", features = ["builder"] }
url = "2.2.2"
