[package]
name = "ascella-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ascella"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.0-beta.14"
ascella-bot = { path = "../bot" }
ascella-database = { path = "../database" }
ascella-http = { path = "../http" }
ascella-ratelimit = { path = "../ratelimit" }
ascella-util = { path = "../util" }
futures = "0.3.18"
openssl = { version = "0.10.38", optional = true }
tokio = { version = "1.14.0", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.3"


[features]
openssl-vendored = ["openssl/vendored"]
