[package]
name = "ascella-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
futures = "0.3.18"
once_cell = "1.8.0"
dotenv = "0.15.0"
serde = { version = "1.0.131", features = ["derive"] }
rand = "0.8.4"
lazy_static = "1.4.0"
base64 = "0.13.0"
log = "0.4.14"
anyhow = "1.0.51"
tokio-postgres = "0.7.5"
tokio-pg-mapper-derive = "0.2.0"
tokio-pg-mapper = "0.2.0"
openssl = { version = "0.10.38", optional = true }
cached = "0.26.2"


[features]
openssl-vendored = ["openssl/vendored"]
