[package]
name = "ascella-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.19"
anyhow = "1.0.52"
ascella-database = { path = "../database" }
base64 = "0.13.0"
cached = "0.26.2"
dotenv = "0.15.0"
futures = "0.3.19"
http = "0.2.6"
image = "0.23.14"
lazy_static = "1.4.0"
log = "0.4.14"
once_cell = "1.9.0"
openssl = { version = "0.10.38", optional = true }
photon-rs = "0.3.1"
rand = "0.8.4"
reqwest = { version = "0.11.8", features = ["json", "gzip", "brotli"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
tokio = { version = "1.15.0", features = ["full"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.5"
tracing = "0.1.29"
url = "2.2.2"
